--- a/article.html
+++ b/article.html
@@ -72,6 +72,11 @@
       </div>
     </div>
 
+    <div class="attribution">
+      Challenge by <a class="attribution__sent" href="https://www.frontendmentor.io?ref=challenge" target="_blank"> Frontend Mentor </a>. 
+      Coded by <a class="attribution__sent" href="#"> Osman Oztuzel </a>.
+    </div>
+
     <script src="app.js"></script>
   </body>
 </html>
