Solve problem with sources

--- a/article.html
+++ b/article.html
@@ -12,7 +12,7 @@
       rel="icon"
       type="image/png"
       sizes="32x32"
-      href="./images/favicon-32x32.png"
+      href="images/favicon-32x32.png"
     />
 
     <title>Frontend Mentor | Article preview component</title>
@@ -22,7 +22,7 @@
       <div class="card__image">
         <img
           class="card__image--drawer"
-          src="/images/drawers.jpg"
+          src="images/drawers.jpg"
           alt="Drawer Image"
         />
       </div>
@@ -41,7 +41,7 @@
 
         <div id="changingSect" class="card__text--user">
           <img
-            src="/images/avatar-michelle.jpg"
+            src="images/avatar-michelle.jpg"
             alt="User Reccomendation"
             class="card__text--user-image"
           />
@@ -51,19 +51,19 @@
           </div>
 
           <button id="shareBtn" class="card__text--user-share">
-            <img  src="/images/icon-share.svg" alt="" />
+            <img  src="images/icon-share.svg" alt="" />
           </button>
           
           <div class="share__action">
             <p class="share__action--text">Share</p>
             <button class="share__action--fb">
-              <img src="/images/icon-facebook.svg" alt="" />
+              <img src="images/icon-facebook.svg" alt="" />
             </button>
             <button class="share__action--tw">
-              <img src="/images/icon-twitter.svg" alt="" />
+              <img src="images/icon-twitter.svg" alt="" />
             </button>
             <button class="share__action--pt">
-              <img src="/images/icon-pinterest.svg" alt="" />
+              <img src="images/icon-pinterest.svg" alt="" />
             </button>
           </div>
         </div>
